addressbook/templates/default/app.css
/**
 * CRM view with contact data in sidebox
 */
.addressbook_sidebox_name {
	font-weight: bold;
}
.addressbook_sidebox_name, .addressbook_sidebox_org {
	font-size: 130%;
	padding: 2px 0 2px 0;
}
td.addressbook_sidebox_header {
	font-weight: bold;
	height: 20px;
	vertical-align: bottom;
}
form[id^=addressbook-view].et2_container {
	height: 0 !important;
}
td.addressbook_sidebox_toolbar {
	vertical-align: bottom;
	height: 32px;
}

.addressbook_view_sidebox img.photo {
	width: 68px;
	padding-right: 3px;
	height: auto;
	vertical-align: bottom;
}
div.addressbook_view_sidebox .toolbox button{
	vertical-align: middle;
}
div.addressbook_view_sidebox img[id$='_button[delete]'] {
	float: right;
	margin-top: 9px;
}
/**
 * new addressbook.edit
 */
#addressbook-edit.et2_container {
}
div.addressbook_edit_general_picture {
	position: relative;
}
div.addressbook_edit_general_picture img {
	position: absolute;
	width: auto;
	max-width: 80px;
	height: 105px;
	left: 2px;
}
.uploadphoto{
	position: absolute;
	top: 70px;
	left: 0;
	display: none;
	border: 2px solid black;
	background-color: #ffffff;
	padding: 4px;
	z-index: 1;
}
.typeIcon { height: 16px; width: 16px; }
.editname{
	position: absolute;
	display: none;
	border: 2px solid black;
	background-color: #ffffff;
	padding: 4px;
	top: 55px;
	left: 102px;
	z-index: 1;
	padding-right: 10px;
}
.custom_country {
	display: none;
}
#addressbook-edit
#addressbook-edit_tel_prefer-tel_work, #addressbook-edit_tel_prefer-tel_cell {
	left: 7px;
}
#addressbook-edit_memberships + .chzn-container .chzn-results {
	max-height: 85px;
}
/**
 * Index page
 */
#addressbook-index img.iphoto {
	height: auto;
}
#addressbook-index .avatar img.iphoto {border:none;box-shadow: none;}
#addressbook-index .avatar span {margin-right: 0;}
#addressbook-index_org_view, #addressbook-index_addressbook-index-right_add > div.et2_box_widget {
	top: 0;
	padding-top: 0;
}
#addressbook-edit_adr_one_locality,
#addressbook-edit_adr_two_locality,
#addressbook-edit_adr_one_postalcode,
#addressbook-edit_adr_two_postalcode{
	
}
div.city_state_postcode #addressbook-edit_adr_two_postalcode,
div.city_state_postcode #addressbook-edit_adr_one_postalcode {margin-right: 5px !important;}
.addressbookHooked .egwGridView_grid label>span.et2_link {
	display: none;
}
/**
 * adjust width of select-boxes in nextmatch
 */
#addressbook-index .filtersContainer {
    position: absolute;
    top: 0; /* Required for Chrome 76+ on Windows */
    left: 350px;
    right: 235px;
}
#addressbook-index .filtersContainer select {
	width: 31.5%;
}
/* category filter chosen. !important is neccessary to override the width set by chosen*/
#addressbook-index .nextmatch_header_row .et2_selectbox.select-cat {min-width:auto;width: 31.5% !important;}
select#addressbook-index_col_filter\[tid\] {
	width: 100px;
}
#addressbook-index_addressbook-index-row select, #addressbook-index_addressbook-index-row et2-select {
	float: right;
	width: 132px;
	display: inline-block;
	height: 20px;
}
et2-button#addressbook-index_nm_advanced-search {
	margin-right: 0 !important;
}
#addressbook-edit .chzn-container .chzn-results {max-height: 110px}

#addressbook-index_nm .chzn-drop {width:auto;}
#addressbook-edit_adr_one_region, #addressbook-edit_adr_two_region {
    vertical-align: middle;
    margin-left: 1px;
}
.smime_section_border {border-top: 1px solid #e5e5e5;}
.smime_section_border> * {padding-top: 10px;}

